# input-z

./: .gitignore  CMakeLists.txt  brand.conf
.github/workflows/: build-macos.yml  build-release.yml
.kiro/specs/windows-tsf-integration/: design.md  requirements.md  tasks.md
build-debug/: fix_qt_refs.sh
installer/: README.md  build_installer.bat  suyan.nsi
installer/macos/package/: common.sh  make_package.sh
installer/macos/scripts/: postinstall
scripts/: build-macos-installer.sh  build-windows-all.bat  build_pkg.sh  check-environment.sh  create-release-tag.sh  generate-icons.sh  get-rime-windows.ps1  release.sh
src/: CMakeLists.txt
src/clipboard/: CMakeLists.txt  clipboard_item_widget.cpp  clipboard_item_widget.h  clipboard_list.cpp  clipboard_list.h  clipboard_manager.cpp  clipboard_manager.h  clipboard_monitor.h  clipboard_store.cpp  clipboard_store.h  clipboard_window.cpp  clipboard_window.h  hotkey_manager.cpp  hotkey_manager.h  image_storage.cpp  image_storage.h
src/clipboard/platform/: mac_clipboard_monitor.h  mac_clipboard_monitor.mm  mac_hotkey_handler.h  mac_hotkey_handler.mm
src/core/: CMakeLists.txt  config_manager.cpp  config_manager.h  input_engine.cpp  input_engine.h  ipc_channel.cpp  ipc_channel.h
src/core/storage/: local_storage.h  sqlite_storage.cpp  sqlite_storage.h
src/platform/macos/: CMakeLists.txt  IMKBridge.mm  fix_qt_refs.sh.in  main.mm  squirrel_integration.cpp  squirrel_integration.h  status_bar_manager.h  status_bar_manager.mm
src/platform/windows/: CMakeLists.txt  key_converter.h  language_bar.cpp  language_bar.h  main.cpp  resource.rc  tray_manager.cpp  tray_manager.h  tsf_bridge.cpp  tsf_bridge.h  tsf_types.h  windows_bridge.cpp  windows_bridge.h
src/platform/windows/tsf_client/: CMakeLists.txt  ipc_client.cpp  ipc_client.h  tsf_client.cpp  tsf_client.def  tsf_client.h  tsf_client.rc
src/platform/windows/tsf_dll/: CMakeLists.txt  dll_main.cpp  ipc_client.cpp  ipc_client.h  language_bar_button.cpp  language_bar_button.h  suyan.def  tsf_dll.rc  tsf_text_service.cpp  tsf_text_service.h
src/server/: CMakeLists.txt  main.cpp  server.rc  server_app.cpp  server_app.h
src/shared/: ipc_protocol.h
src/ui/: CMakeLists.txt  candidate_view.cpp  candidate_view.h  candidate_window.cpp  candidate_window.h  candidate_window_win.cpp  theme_manager.cpp
tests/: CMakeLists.txt
tests/clipboard/: .gitkeep  clipboard_integration_test.cpp  clipboard_manager_test.cpp  clipboard_store_test.cpp  clipboard_ui_test.cpp  image_storage_test.cpp  performance_test.cpp  storage_validation_test.cpp
tests/core/: config_manager_test.cpp
tests/platform/windows/: cursor_position_test.cpp  key_converter_test.cpp
tests/ui/: candidate_window_visibility_test.cpp
